# easyparser

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: comparison.py
cookbook/: .gitignore  01_Features.ipynb  01_features.ipynb  03_langchain-integration.ipynb  88_pdf.ipynb  89_toc.ipynb  90_markdown.ipynb  91_Docx.ipynb  91_docx.ipynb  92_pptx.ipynb
cookbook/assets/: sample.docx
easyparser/: __init__.py  auto.py  base.py  cli.py  controller.py  models.py  router.py
easyparser/chunk/: text.py  utils.py
easyparser/load/: base.py  pdf.py
easyparser/mime/: base.py  guess.py  mime_csv.py  mime_docx.py  mime_epub.py  mime_html.py  mime_jpg.py  mime_json.py  mime_md.py  mime_mp3.py  mime_mp4.py  mime_pdf.py  mime_pptx.py  mime_toml.py  mime_wav.py  mime_xlsx.py  mime_yaml.py  pdf.py
easyparser/parse/: html.py  image.py  md.py  pandoc_engine.py  pdf.py  pptx.py  text.py  video.py
easyparser/parser/: audio.py  base.py  csv.py  dict_list.py  directory.py  html.py  image.py  md.py  pandoc_engine.py  pdf.py  pptx.py  text.py  video.py  xlsx.py
easyparser/split/: agentic_chunker.py  lumber_chunker.py  md.py  propositionizer.py  split.py  text.py  toc_builder.py
easyparser/store/: fs.py
easyparser/util/: plot.py
gradio/: app.py  header.html  requirements.txt
tests/: test_chunkgroup.py  test_core.py  test_parsers.py
tests/test_load/: test_pdf.py
tests/test_parse/: test_audio.py  test_csv.py  test_dict_list.py  test_directory.py  test_epub.py  test_html.py  test_md.py  test_pandoc.py  (+6 more)
(+18 files in other folders)
